--- a/src/XiHan.EventBus/XiHan.EventBus.csproj
+++ b/src/XiHan.EventBus/XiHan.EventBus.csproj
@@ -1,24 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <GenerateDocumentationFile>True</GenerateDocumentationFile>
-        <RepositoryUrl>https://github.com/XiHanFun/XiHan.Framework</RepositoryUrl>
-        <AssemblyVersion>0.4.2</AssemblyVersion>
-        <FileVersion>0.4.2</FileVersion>
-        <Title>XiHan.EventBus</Title>
-        <Version>0.4.2</Version>
-        <Authors>ZhaiFanhua</Authors>
-        <Copyright>Copyright © ZhaiFanhua All Rights Reserved.</Copyright>
-        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-        <Description>XiHan.EventBus</Description>
-        <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-        <PackageIcon>readme.png</PackageIcon>
-        <PackageReadmeFile>readme.md</PackageReadmeFile>
-        <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    </PropertyGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+	<Import Project="..\..\props\common.props" />
+	
+	<PropertyGroup>
+		<Title>XiHan.EventBus</Title>
+		<IsPackable>true</IsPackable>
+		<OutputType>Library</OutputType>
+	</PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Confluent.Kafka" Version="2.6.0" />
@@ -29,25 +16,4 @@
     <ItemGroup>
       <ProjectReference Include="..\XiHan.Infrastructures\XiHan.Infrastructures.csproj" />
     </ItemGroup>
-
-    <ItemGroup>
-        <None Update="LICENSE">
-            <PackagePath>\</PackagePath>
-            <Pack>True</Pack>
-        </None>
-        <None Update="readme.md">
-            <PackagePath>\</PackagePath>
-            <Pack>True</Pack>
-        </None>
-        <None Update="readme.png">
-            <PackagePath>\</PackagePath>
-            <Pack>True</Pack>
-        </None>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Kafka\" />
-      <Folder Include="RabbitMQ\" />
-    </ItemGroup>
-
 </Project>
