--- a/src/XiHan.Jobs/XiHan.Jobs.csproj
+++ b/src/XiHan.Jobs/XiHan.Jobs.csproj
@@ -1,24 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
+	<Import Project="..\..\props\common.props" />
 
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <GenerateDocumentationFile>True</GenerateDocumentationFile>
-        <RepositoryUrl>https://github.com/XiHanFun/XiHan.Framework</RepositoryUrl>
-        <AssemblyVersion>0.4.2</AssemblyVersion>
-        <FileVersion>0.4.2</FileVersion>
-        <Title>XiHan.Jobs</Title>
-        <Version>0.4.2</Version>
-        <Authors>ZhaiFanhua</Authors>
-        <Copyright>Copyright © ZhaiFanhua All Rights Reserved.</Copyright>
-        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-        <Description>XiHan.Jobs</Description>
-        <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-        <PackageIcon>readme.png</PackageIcon>
-        <PackageReadmeFile>readme.md</PackageReadmeFile>
-        <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    </PropertyGroup>
+	<PropertyGroup>
+		<Title>XiHan.Jobs</Title>
+		<IsPackable>true</IsPackable>
+		<OutputType>Library</OutputType>
+	</PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.13.0" />
@@ -26,20 +13,5 @@
 
     <ItemGroup>
         <ProjectReference Include="..\XiHan.Services\XiHan.Services.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <None Update="LICENSE">
-            <Pack>True</Pack>
-            <PackagePath>\</PackagePath>
-        </None>
-        <None Update="readme.md">
-            <Pack>True</Pack>
-            <PackagePath>\</PackagePath>
-        </None>
-        <None Update="readme.png">
-            <Pack>True</Pack>
-            <PackagePath>\</PackagePath>
-        </None>
     </ItemGroup>
 </Project>
