--- a/src/XiHan.WebCore/XiHan.WebCore.csproj
+++ b/src/XiHan.WebCore/XiHan.WebCore.csproj
@@ -1,24 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+	<Import Project="..\..\props\common.props" />
 
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <GenerateDocumentationFile>True</GenerateDocumentationFile>
-        <RepositoryUrl>https://github.com/XiHanFun/XiHan.Framework</RepositoryUrl>
-        <AssemblyVersion>0.4.2</AssemblyVersion>
-        <FileVersion>0.4.2</FileVersion>
-        <Title>XiHan.WebCore</Title>
-        <Version>0.4.2</Version>
-        <Authors>ZhaiFanhua</Authors>
-        <Copyright>Copyright © ZhaiFanhua All Rights Reserved.</Copyright>
-        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-        <Description>XiHan.WebCore</Description>
-        <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-        <PackageIcon>readme.png</PackageIcon>
-        <PackageReadmeFile>readme.md</PackageReadmeFile>
-        <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    </PropertyGroup>
+	<PropertyGroup>
+		<Title>XiHan.WebCore</Title>
+		<IsPackable>true</IsPackable>
+		<OutputType>Library</OutputType>
+	</PropertyGroup>
+	
     <ItemGroup>
         <PackageReference Include="AspNet.Security.OAuth.Alipay" Version="8.2.0" />
         <PackageReference Include="AspNet.Security.OAuth.Gitee" Version="8.2.0" />
@@ -34,21 +22,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.2" />
         <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="8.0.10" />
     </ItemGroup>
+	
     <ItemGroup>
         <ProjectReference Include="..\XiHan.Jobs\XiHan.Jobs.csproj" />
-    </ItemGroup>
-    <ItemGroup>
-        <None Update="LICENSE">
-            <Pack>True</Pack>
-            <PackagePath>\</PackagePath>
-        </None>
-        <None Update="readme.md">
-            <Pack>True</Pack>
-            <PackagePath>\</PackagePath>
-        </None>
-        <None Update="readme.png">
-            <Pack>True</Pack>
-            <PackagePath>\</PackagePath>
-        </None>
     </ItemGroup>
 </Project>
