--- a/src/XiHan.WebHost/XiHan.WebHost.csproj
+++ b/src/XiHan.WebHost/XiHan.WebHost.csproj
@@ -1,29 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+	<Import Project="..\..\props\common.props" />
 
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <Nullable>enable</Nullable>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <GenerateDocumentationFile>True</GenerateDocumentationFile>
-        <UserSecretsId>cfd2e93f-edba-404a-9fae-b08d34162057</UserSecretsId>
-        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-        <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
-        <RepositoryUrl>https://github.com/XiHanFun/XiHan.Framework</RepositoryUrl>
-        <AssemblyVersion>0.4.2</AssemblyVersion>
-        <FileVersion>0.4.2</FileVersion>
-        <Title>XiHan.WebHost</Title>
-        <Version>0.4.2</Version>
-        <Authors>ZhaiFanhua</Authors>
-        <Copyright>Copyright © ZhaiFanhua All Rights Reserved.</Copyright>
-        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-        <Description>XiHan.WebHost</Description>
-        <IsPackable>true</IsPackable>
-        <OutputType>Exe</OutputType>
-        <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-        <PackageIcon>readme.png</PackageIcon>
-        <PackageReadmeFile>readme.md</PackageReadmeFile>
-        <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    </PropertyGroup>
+	<PropertyGroup>
+		<Title>XiHan.WebHost</Title>
+		<IsPackable>true</IsPackable>
+		<OutputType>Exe</OutputType>
+	</PropertyGroup>
 
     <PropertyGroup Condition=" '$(RunConfiguration)' == 'Development' " />
     <PropertyGroup Condition=" '$(RunConfiguration)' == 'Test' " />
@@ -76,21 +58,6 @@
         </None>
         <None Update="Properties\PublishProfiles\ProductionWindows.pubxml">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-        </None>
-    </ItemGroup>
-
-    <ItemGroup>
-        <None Update="LICENSE">
-            <Pack>True</Pack>
-            <PackagePath>\</PackagePath>
-        </None>
-        <None Update="readme.md">
-            <Pack>True</Pack>
-            <PackagePath>\</PackagePath>
-        </None>
-        <None Update="readme.png">
-            <Pack>True</Pack>
-            <PackagePath>\</PackagePath>
         </None>
     </ItemGroup>
 
